--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
         <br />
         <br />
 
-        <br />
-        <br />
-        <br />
+        <div>
+          <div>Radius: <span id="radius-value"></span></div>
+          1 <input type="range" id="radius" name="radius" min="1" max="10" /> 10
+        </div>
 
         <canvas id="canvas-radius" width="500" height="500"></canvas>
+        <br />
+        <div>Points of Contacts: <span id="points-of-contact"></span></div>
       </div>
     </div>
 
