--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="flex">
       <canvas id="canvas-main" width="1000" height="1000"></canvas>
       <div class="flex-col">
+        <fieldset id="colors"></fieldset>
+        <br />
+
         <table>
           <thead>
             <tr>
@@ -42,6 +45,8 @@
         <canvas id="canvas-radius" width="500" height="500"></canvas>
         <br />
         <div>Points of Contacts: <span id="points-of-contact"></span></div>
+        <br />
+        <br />
       </div>
     </div>
 
