--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     </div>
 
     <script src="./js/util.js"></script>
+    <script src="./js/config.js"></script>
     <script src="./js/setup.js"></script>
     <script src="./js/Matrix.js"></script>
-    <script src="./js/RadisDisplay.js"></script>
+    <script src="./js/RadiusDisplay.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
