--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
         <br />
         <div>
           <select id="schema" name="schema">
-            <option value="circle">Circle</option>
-            <option value="diaganol">Diaganol</option>
+            <option value="circle" selected>Circle</option>
             <option value="grid">Grid</option>
+            <option value="diaganol">Diaganol</option>
             <option value="inverted_diamond">Inverted Diamond</option>
             <option value="inverted_circle">Inverted Circle</option>
+            <option value="crazy">Crazy</option>
+            <option value="inverted_diamond_2">Inverted Diamond 2</option>
+            <option value="s">S</option>
+            <option value="two_quadrants">Two Quadrants</option>
+            <option value="concentric">Concentric</option>
+            <option value="hourglass">Hourglass</option>
+            <option value="perimeter">Perimeter</option>
+            <option value="weave">Weave</option>
           </select>
         </div>
         <br />
