--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
               <td>Color</td>
               <td>Count</td>
               <td>Percentage</td>
+              <td>Regions</td>
               <td>Change</td>
             </tr>
           </thead>
