--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <option value="inverted_circle">Inverted Circle</option>
             <option value="crazy">Crazy</option>
             <option value="inverted_diamond_2">Inverted Diamond 2</option>
-            <option value="s">S</option>
+            <option value="asymetric">Asymetric</option>
             <option value="two_quadrants">Two Quadrants</option>
             <option value="concentric">Concentric</option>
             <option value="hourglass">Hourglass</option>
