reorder and rename functions

--- a/index.html
+++ b/index.html
@@ -23,18 +23,17 @@
         <h2>Schema</h2>
         <div class="margin-bottom">
           <select id="schema" name="schema">
-            <option value="circle" selected>Circle</option>
             <option value="grid">Grid</option>
+            <option value="circle" selected>Circle</option>
             <option value="diaganol">Diaganol</option>
-            <option value="inverted_diamond">Inverted Diamond</option>
             <option value="inverted_circle">Inverted Circle</option>
-            <option value="crazy">Crazy</option>
-            <option value="inverted_diamond_2">Inverted Diamond 2</option>
+            <option value="inverted_diamond">Inverted Diamond</option>
             <option value="asymetric">Asymetric</option>
+            <option value="crazy">Crazy</option>
             <option value="two_quadrants">Two Quadrants</option>
-            <option value="concentric">Concentric</option>
             <option value="hourglass">Hourglass</option>
             <option value="perimeter">Perimeter</option>
+            <option value="crosshair">Crosshair</option>
             <option value="weave">Weave</option>
           </select>
         </div>
