--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Colourful Cells</title>
+    <link rel="icon" type="image/png" href="./assets/favicon.png" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <title>Cells</title>
   </head>
   <body>
     <div class="flex">
