remove flex from fieldset

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="flex">
       <div class="flex-col padding">
         <h2>Colours</h2>
-        <fieldset id="colors" class="margin-bottom flex"></fieldset>
+        <fieldset id="colors" class="margin-bottom"></fieldset>
         <canvas id="canvas-radius" width="500" height="500"></canvas>
         <br />
         <div>Points of Contacts: <span id="points-of-contact"></span></div>
