--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="flex space-around">
       <div class="flex-col space-between padding left">
         <div class="flex-col padding">
+          <h1>Colourful Cells</h1>
           <canvas id="canvas-radius" width="500" height="500"></canvas>
           <br />
           <div>Points of Contacts: <span id="points-of-contact"></span></div>
