--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
             <span id="threshold_max"></span>
           </div>
         </div>
+        <div class="margin-bottom margin-top">
+          <label for="favorites">Favorites</label>
+          <select id="favorites" name="favorites">
+            <option value="">-</option>
+            <option value="test_1">Grid - T12 - R2</option>
+            <option value="test_2">Test 2</option>
+          </select>
+        </div>
         <div class="flex space-between">
           <button class="button" id="next">NEXT</button>
           <button class="button red" id="reset">RESET</button>
@@ -84,6 +92,7 @@
     </div>
 
     <script src="./js/util.js"></script>
+    <script src="./js/favorites.js"></script>
     <script src="./js/config.js"></script>
     <script src="./js/setup.js"></script>
     <script src="./js/Matrix.js"></script>
