--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
 
         <section id="iterations-section">
           <h2 class="white hidden">Number of Iterations:</h2>
-          <div><span class="white big-font" id="iterations"></span></div>
+          <div class="white">
+            <span class="white big-font" id="iterations"></span>
+          </div>
         </section>
         <section id="button-menu">
           <button class="button hidden" id="next">NEXT</button>
-          <button class="button hidden reset red" id="reset">RESET</button>
-          <button class="button green start" id="start">START</button>
+          <button class="button hidden reset" id="reset">&#9783;</button>
+          <button class="button start" id="start">&#9658;</button>
         </section>
       </div>
     </div>
