--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="flex space-around">
       <div class="hidden flex-col space-between padding left">
         <div class="flex-col padding">
-          <h1>Colourful Cells</h1>
+          <h1>Digital Tea Leaves</h1>
           <section>
             <canvas id="canvas-radius" width="500" height="500"></canvas>
           </section>
