--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Colourful Cells</title>
+    <title>Digital Tea Leaves</title>
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
