--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
   <body>
-    <div class="flex space-around">
+    <div class="flex center">
       <div class="hidden flex-col space-between padding left">
         <div class="flex-col padding">
           <h1>Digital Tea Leaves</h1>
@@ -83,8 +83,8 @@
                 <td>Color</td>
                 <td class="hidden">Count</td>
                 <td>Percentage</td>
-                <td>Regions</td>
-                <td>Change</td>
+                <td class="hidden">Regions</td>
+                <td class="hidden">Change</td>
               </tr>
             </thead>
             <tbody id="statistics"></tbody>
