--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           </select>
         </div>
       </section>
-      <section id="canvas-section ">
+      <section id="canvas-section">
         <canvas id="canvas-main" width="1000" height="1000"></canvas>
       </section>
       <section id="display-panel-section">
-        <section id="colors-section" class="hidden">
+        <section id="colors-section">
           <h2>Colours</h2>
           <fieldset id="colors" class="hidden margin-bottom"></fieldset>
         </section>
@@ -91,17 +91,17 @@
           </table>
         </section>
 
-        <section id="button-menu">
-          <button class="button hidden" id="next">NEXT</button>
-          <button class="button hidden reset" id="reset">&#9783;</button>
-          <button class="button start-button" id="start">&#9658;</button>
-        </section>
-
         <section id="iterations-section">
           <h2 class="white hidden">Number of Iterations:</h2>
           <div class="white">
             <span class="white big-font" id="iterations"></span>
           </div>
+        </section>
+
+        <section id="button-menu">
+          <button class="button hidden" id="next">NEXT</button>
+          <button class="button hidden reset" id="reset">Reset</button>
+          <button class="button start-button" id="start">Start</button>
         </section>
       </section>
     </div>
