--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     </div>
 
     <script src="./js/util.js"></script>
+    <script src="./js/colors.js"></script>
     <script src="./js/favorites.js"></script>
     <script src="./js/config.js"></script>
     <script src="./js/setup.js"></script>
