--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
           <h2 class="white hidden">Number of Iterations:</h2>
           <div class="white">
             <span class="white big-font" id="iterations"></span>
+            <span id="hidden-surprise" class="hidden">; )</span>
           </div>
         </section>
 
