--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     </div>
 
     <script src="./js/util.js"></script>
+    <script src="./js/statistics.js"></script>
     <script src="./js/colors.js"></script>
     <script src="./js/favorites.js"></script>
     <script src="./js/config.js"></script>
