shuffle with location reload

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             </thead> -->
             <tbody id="statistics"></tbody>
           </table>
+          <div style="min-height: 50px">
+            <button class="button button-small" id="shuffle">Shuffle</button>
+          </div>
         </section>
 
         <section id="iterations-section">
@@ -101,8 +104,12 @@
 
         <section id="button-menu">
           <button class="button hidden" id="next">NEXT</button>
-          <button class="button hidden reset" id="reset">Reset</button>
-          <button class="button start-button" id="start">Start</button>
+          <button class="button hidden reset button-big" id="reset">
+            Reset
+          </button>
+          <button class="button start-button button-big" id="start">
+            Start
+          </button>
         </section>
       </section>
     </div>
