working save button

--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
           </button>
         </section>
       </section>
+      <button
+        id="save-button"
+        class="margin-top button small-button hidden"
+        onclick="download_image()"
+      >
+        Save
+      </button>
     </div>
 
     <script src="./js/util.js"></script>
