--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div id="wrapper">
-      <section class="hidden flex-col space-between">
+      <section class="flex-col space-between">
         <div class="flex-col">
           <h1>Digital Tea Leaves</h1>
-          <section>
+          <section class="hidden">
             <canvas id="canvas-radius" width="500" height="500"></canvas>
           </section>
           <br />
@@ -38,7 +38,7 @@
             </select>
           </div>
 
-          <div class="hidden margin-bottom">
+          <div class="white margin-bottom">
             <h2>Radius: <span id="radius-value"></span></h2>
             1
             <input type="range" id="radius" name="radius" min="1" max="10" /> 10
@@ -57,9 +57,9 @@
             <span id="threshold_max"></span>
           </div>
         </div>
-        <div class="hidden margin-bottom">
+        <div class="hidden white margin-bottom">
           <label for="favorites">Favorites</label>
-          <select id="favorites" name="favorites">
+          <select class="white" id="favorites" name="favorites">
             <option value="">-</option>
             <option value="test_1">Grid - T12 - R2</option>
             <option value="test_2">Diaganol - T8 - R4</option>
@@ -72,7 +72,7 @@
       <section id="display-panel-section">
         <section id="colors-section">
           <h2>Colours</h2>
-          <fieldset id="colors" class="hidden margin-bottom"></fieldset>
+          <fieldset id="colors" class="white hidden margin-bottom"></fieldset>
         </section>
         <section id="distribution-section">
           <h2 class="hidden">Distribution</h2>
@@ -120,6 +120,7 @@
     <script src="./js/favorites.js"></script>
     <script src="./js/config.js"></script>
     <script src="./js/setup.js"></script>
+    <script src="./js/GameBoard.js"></script>
     <script src="./js/Matrix.js"></script>
     <script src="./js/RadiusDisplay.js"></script>
     <script src="./js/main.js"></script>
