--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <section class="flex-col space-between">
+      <section class="hidden flex-col space-between">
         <div class="flex-col">
           <h1>Digital Tea Leaves</h1>
           <section class="hidden">
