--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
             <canvas id="canvas-radius" width="500" height="500"></canvas>
           </section>
           <br />
-          <div class="hidden">
-            Points of Contacts: <span id="points-of-contact"></span>
+          <div class="white">
+            # Neighbours: <span id="points-of-contact"></span>
+            <br />
+            Difficulty: <span id="difficulty"></span>
+            <br />
           </div>
 
-          <div class="hidden margin-bottom">
+          <div class="margin-bottom">
             <h2>Schema</h2>
             <select id="schema" name="schema">
               <option value="grid">Grid</option>
@@ -44,13 +47,14 @@
             <input type="range" id="radius" name="radius" min="1" max="10" /> 10
           </div>
 
-          <div class="hidden margin-bottom">
+          <div class="white margin-bottom">
             <h2>Threshold: <span id="threshold_display_value"></span></h2>
-            0
+            <span id="threshold_min">0</span>
             <input
               type="range"
               id="threshold"
               name="threshold"
+              value="1"
               min="0"
               max="10"
             />
