--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <section class="hidden flex-col space-between">
+      <section class="flex-col space-between">
         <div class="flex-col">
           <h1>Digital Tea Leaves</h1>
           <section class="hidden">
@@ -61,7 +61,7 @@
             <span id="threshold_max"></span>
           </div>
         </div>
-        <div class="hidden white margin-bottom">
+        <div class="white margin-bottom">
           <label for="favorites">Favorites</label>
           <select class="white" id="favorites" name="favorites">
             <option value="">-</option>
@@ -76,7 +76,7 @@
       <section id="display-panel-section">
         <section id="colors-section">
           <h2>Colours</h2>
-          <fieldset id="colors" class="white hidden margin-bottom"></fieldset>
+          <fieldset id="colors" class="white margin-bottom"></fieldset>
         </section>
         <section id="distribution-section">
           <h2 class="hidden">Distribution</h2>
