--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="white margin-bottom">
           <label for="favorites">Favorites</label>
-          <select class="white" id="favorites" name="favorites">
+          <select id="favorites" name="favorites">
             <option value="">-</option>
             <option value="test_1">Grid - T12 - R2</option>
             <option value="test_2">Diaganol - T8 - R4</option>
