revert hidden elements to hidden

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <section class="flex-col space-between">
+      <section class="hidden flex-col space-between">
         <div class="flex-col">
           <h1>Digital Tea Leaves</h1>
           <section class="hidden">
@@ -76,7 +76,7 @@
       <section id="display-panel-section">
         <section id="colors-section">
           <h2>Colours</h2>
-          <fieldset id="colors" class="white margin-bottom"></fieldset>
+          <fieldset id="colors" class="hidden white margin-bottom"></fieldset>
         </section>
         <section id="distribution-section">
           <h2 class="hidden">Distribution</h2>
