--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div id="wrapper">
-      <section class="hidden flex-col space-between">
+      <section class="wip flex-col space-between">
         <div class="flex-col">
           <h1>Digital Tea Leaves</h1>
-          <section class="hidden">
+          <section class="wip">
             <canvas id="canvas-radius" width="500" height="500"></canvas>
           </section>
           <br />
@@ -76,7 +76,7 @@
       <section id="display-panel-section">
         <section id="colors-section">
           <h2>Colours</h2>
-          <fieldset id="colors" class="hidden white margin-bottom"></fieldset>
+          <fieldset id="colors" class="wip white margin-bottom"></fieldset>
         </section>
         <section id="distribution-section">
           <h2 class="hidden">Distribution</h2>
